@@ -39,5 +39,5 @@ except pkg_resources.UnknownExtra:
         'install requests-2.4.1+.'
     )
 
-useragent_header = [('User-agent',
+useragent_header = [('User-Agent',
                      'Mozilla/5.0 (X11; Linux x86_64; rv:25.0) Gecko/20100101 Firefox/25.0')]
