@@ -66,7 +66,7 @@ def test_build_all():
         )
 
     with mock.patch('sphinx.builders.linkcheck.requests') as requests:
-        requests.Session().head = request_session_head
+        requests.head = request_session_head
 
         # note: no 'html' - if it's ok with dirhtml it's ok with html
         for buildername in ['dirhtml', 'singlehtml', 'latex', 'texinfo', 'pickle',
